Adding data oriented example